chore: implemented /auth/login endpoint
